Closed Bug 1958293 Opened 1 year ago Closed 1 year ago

Crash in [@ mozilla::css::SheetLoadData::VerifySheetReadyToParse]

Categories

(Core :: Layout, defect)

defect

Tracking

()

RESOLVED FIXED
139 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox137 --- fixed
firefox138 --- fixed
firefox139 --- fixed

People

(Reporter: aryx, Assigned: emilio)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

28 crashes from 12 installs of Firefox 137.0 and no reports for v136. Are these crashes related to the reported userChrome.css changes in v137?

Crash report: https://crash-stats.mozilla.org/report/index/5b74d692-add3-48ed-97ab-d87ce0250403

Reason:

EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames:

0  xul.dll  mozilla::css::SheetLoadData::VerifySheetReadyToParse(nsresult, nsTSubstring<c...  layout/style/Loader.cpp:770
0  xul.dll  mozilla::css::StreamLoader::OnStopRequest(nsIRequest*, nsresult)  layout/style/StreamLoader.cpp:161
1  xul.dll  nsSyncLoadService::PushSyncStreamToListener(already_AddRefed<nsIInputStream>,...  dom/base/nsSyncLoadService.cpp:360
2  xul.dll  mozilla::css::Loader::LoadSheetSyncInternal(mozilla::css::SheetLoadData&, moz...  layout/style/Loader.cpp:1209
2  xul.dll  mozilla::css::Loader::LoadSheet(mozilla::css::SheetLoadData&, mozilla::css::L...  layout/style/Loader.cpp:1305
3  xul.dll  mozilla::css::Loader::InternalLoadNonDocumentSheet(nsIURI*, mozilla::css::Sty...  layout/style/Loader.cpp:2187
4  xul.dll  mozilla::css::Loader::LoadSheetSync(nsIURI*, mozilla::css::SheetParsingMode, ...  layout/style/Loader.cpp:2114
5  xul.dll  nsStyleSheetService::LoadAndRegisterSheetInternal(nsIURI*, unsigned int)  layout/base/nsStyleSheetService.cpp:159
6  xul.dll  nsStyleSheetService::LoadAndRegisterSheet(nsIURI*, unsigned int)  layout/base/nsStyleSheetService.cpp:111
7  xul.dll  mozilla::dom::ContentChild::RecvLoadAndRegisterSheet(nsIURI*, unsigned int co...  dom/ipc/ContentChild.cpp:2872

Are these crashes related to the reported userChrome.css changes in v137?

Do you know the answer?

Flags: needinfo?(emilio)

No, this seems like a regression from bug 1948887.

Flags: needinfo?(emilio)
Keywords: regression
Regressed by: 1948887
Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/99277fb83bb8 Null-check referrer URI in CSS Loader warning. r=jwatt
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 139 Branch

Comment on attachment 9476952 [details]
Bug 1958293 - Null-check referrer URI in CSS Loader warning. r=#style

Beta/Release Uplift Approval Request

  • User impact if declined/Reason for urgency: Comment 0
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Null check
  • String changes made/needed: none
  • Is Android affected?: Yes
Attachment #9476952 - Flags: approval-mozilla-beta?
Attachment #9476952 - Flags: approval-mozilla-release?

Comment on attachment 9476952 [details]
Bug 1958293 - Null-check referrer URI in CSS Loader warning. r=#style

Approved for 138.0b4

Attachment #9476952 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Comment on attachment 9476952 [details]
Bug 1958293 - Null-check referrer URI in CSS Loader warning. r=#style

Approved as a ridealong for 137.0.1 that ships this week.

Attachment #9476952 - Flags: approval-mozilla-release? → approval-mozilla-release+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: