Bug 1958293 - Null-check referrer URI in CSS Loader warning. r=jwatt a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D244348